[tool.poetry]
name = "defn-cdktf-provider-buildkite"
version = "0.4.0"
description = ""
authors = ["Amanibhavam <iam@defn.sh>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "defn_template.cli:main"
